--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dayjs": "^1.11.7",
     "echarts": "^5.4.2",
+    "element-plus": "^2.2.0",
     "express": "^4.18.2",
     "gsap": "^3.11.3",
     "lodash-es": "^4.17.21",
@@ -22,7 +23,8 @@
     "pinia": "^2.0.32",
     "three": "^0.152.2",
     "v-scale-screen": "^2.2.0",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
@@ -37,8 +39,13 @@
     "eslint-plugin-vue": "^9.9.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
+    "sass": "^1.32.13",
+    "sass-loader": "^10.1.1",
     "typescript": "~4.8.4",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^4.1.4",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.2.0"
   }
 }
