--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,37 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "compilerOptions": {
+    "target": "es2018",
+    "useDefineForClassFields": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "strict": true,
+    "allowJs": true,
+    "jsx": "preserve",
     "baseUrl": ".",
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "noImplicitAny": false,
+    "importHelpers": true,
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "skipLibCheck": true,
+    "lib": ["esnext", "dom"],
+    "types": ["vite/client", "node", "./node_modules/element-plus/global"],
+    "typeRoots": ["./node_modules/@types/", "./types"],
     "paths": {
-      "@/*": ["./src/*"]
-    },
-    "target": "ESNext",
-    "lib": ["es2015", "es2017.object", "dom", "ES2020"]
-  },
-
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
+      "@/*": ["src/*"],
     }
-  ]
+  },
+  "include": [
+    "tests/**/*.ts",
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "types/**/*.d.ts",
+    "types/**/*.ts",
+    "build/**/*.ts",
+    "build/**/*.d.ts", "src/main.js",
+  ],
+  "exclude": ["node_modules", "dist"]
 }
