--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.2",
     "element-plus": "^2.2.0",
@@ -21,7 +22,7 @@
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
     "pinia": "^2.0.32",
-    "three": "^0.152.2",
+    "three": "^0.166.1",
     "v-scale-screen": "^2.2.0",
     "vue": "^3.2.47",
     "vue-router": "^4.4.0"
